Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4134

Traffic Manager aborts on attempted privilege escalation when non-root.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 6.1.0
    • Manager

    Description

      Traffic Manager aborts since it cannot elevate access in mgmt/Rollback.cc and mgmt/LocalManager.cc. The root of the issue might be that the semantics of the ElevateAccess constructor argument was changed from (boolean,level) to just a (level) by commit 6a5f6241 or TS-306. It seems the ElevateAccess access( <boolean-expression> ) calls in these two files were not changed.

      Attachments

        Issue Links

          Activity

            People

              amc Alan M. Carroll
              pbchou Peter Chou
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: