TS-4134: Fix privilege elevation issues.