lib/ts/ink_cap.cc
@@ -307,37 +307,74 @@ EnableDeathSignal(int signum)
 #endif
 }
 
+int
+elevating_open(char const *path, unsigned int flags, unsigned int fperms)
+{
+  int fd = open(path, flags, fperms);
+  if (fd < 0 && (EPERM == errno || EACCES == errno)) {
+    ElevateAccess access(ElevateAccess::FILE_PRIVILEGE);
+    fd = open(path, flags, fperms);
+  }
+  return fd;
+}
+
+int
+elevating_open(char const *path, unsigned int flags)
+{
+  int fd = open(path, flags);
+  if (fd < 0 && (EPERM == errno || EACCES == errno)) {
+    ElevateAccess access(ElevateAccess::FILE_PRIVILEGE);
+    fd = open(path, flags);
+  }
+  return fd;
+}
+
+FILE*
+elevating_fopen(char const *path, const char* mode)
+{
+  FILE* f = fopen(path, mode);
+  if (NULL == f && (EPERM == errno || EACCES == errno)) {
+    ElevateAccess access(ElevateAccess::FILE_PRIVILEGE);
+    f = fopen(path, mode);
+  }
+  return f;
+}
+
 #if TS_USE_POSIX_CAP
 /** Acquire file access privileges to bypass DAC.
     @a level is a mask of the specific file access capabilities to acquire.
  */
 void
-ElevateAccess::acquireFileAccessCap(unsigned level)
+ElevateAccess::acquirePrivilege(unsigned priv_mask)
 {
   unsigned cap_count = 0;
   cap_value_t cap_list[2];
   cap_t new_cap_state;
 
-  Debug("privileges", "[acquireFileAccessCap] level= %x\n", level);
+  Debug("privileges", "[acquirePrivilege] level= %x\n", level);
 
   ink_assert(NULL == cap_state);
 
-  if (level) {
+  // Some privs aren't checked or used here because they are kept permanently in the
+  // the capability list. See @a eff_list in @c RestrictCapabilities
+  // It simplifies things elsewhere to be able to specify them so that the cases for
+  // POSIX capabilities and user impersonation have the same interface.
+
+  if (priv_mask & ElevateAccess::FILE_PRIVILEGE) {
+    cap_list[cap_count] = CAP_DAC_OVERRIDE;
+    ++cap_count;
+  }
+
+  if (priv_mask & ElevateAccess::TRACE_PRIVILEGE) {
+    cap_list[cap_count] = CAP_SYS_PTRACE;
+    ++cap_count;
+  }
+
+  ink_release_assert(cap_count <= sizeof(cap_list));
+
+  if (cap_count > 0) {
     this->cap_state = cap_get_proc(); // save current capabilities
     new_cap_state = cap_get_proc();   // and another instance to modify.
-
-    if (level & ElevateAccess::FILE_PRIVILEGE) {
-      cap_list[cap_count] = CAP_DAC_OVERRIDE;
-      ++cap_count;
-    }
-
-    if (level & ElevateAccess::TRACE_PRIVILEGE) {
-      cap_list[cap_count] = CAP_SYS_PTRACE;
-      ++cap_count;
-    }
-
-    ink_release_assert(cap_count <= sizeof(cap_list));
-
     cap_set_flag(new_cap_state, CAP_EFFECTIVE, cap_count, cap_list, CAP_SET);
 
     if (cap_set_proc(new_cap_state) != 0) {
@@ -345,12 +382,13 @@ ElevateAccess::acquireFileAccessCap(unsigned level)
     }
 
     cap_free(new_cap_state);
+    elevated = true;
   }
 }
 /** Restore previous capabilities.
  */
 void
-ElevateAccess::releaseFileAccessCap()
+ElevateAccess::releasePrivilege()
 {
   Debug("privileges", "[releaseFileAccessCap]");
 
@@ -379,7 +417,7 @@ ElevateAccess::ElevateAccess(unsigned lvl)
 
 ElevateAccess::~ElevateAccess()
 {
-  if (elevated == true) {
+  if (elevated) {
     demote();
 #if !TS_USE_POSIX_CAP
     DEBUG_CREDENTIALS("privileges");
@@ -389,28 +427,31 @@ ElevateAccess::~ElevateAccess()
 }
 
 void
-ElevateAccess::elevate(unsigned level)
+ElevateAccess::elevate(unsigned priv_mask)
 {
 #if TS_USE_POSIX_CAP
-  acquireFileAccessCap(level);
+  acquirePrivilege(priv_mask);
 #else
-  (void)level;
-  // Since we are setting a process-wide credential, we have to block any other thread
-  // attempting to elevate until this one demotes.
-  ink_mutex_acquire(&lock);
-  ImpersonateUserID(0, IMPERSONATE_EFFECTIVE);
+  if (priv_mask) {
+    // Since we are setting a process-wide credential, we have to block any other thread
+    // attempting to elevate until this one demotes.
+    ink_mutex_acquire(&lock);
+    ImpersonateUserID(0, IMPERSONATE_EFFECTIVE);
+    elevated = true;
+  }
 #endif
-  elevated = true;
 }
 
 void
 ElevateAccess::demote()
 {
+  if (elevated) {
 #if TS_USE_POSIX_CAP
-  releaseFileAccessCap();
+    releasePrivilege();
 #else
-  ImpersonateUserID(saved_uid, IMPERSONATE_EFFECTIVE);
-  ink_mutex_release(&lock);
+    ImpersonateUserID(saved_uid, IMPERSONATE_EFFECTIVE);
+    ink_mutex_release(&lock);
 #endif
-  elevated = false;
+    elevated = false;
+  }
 }
